--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -39,17 +39,19 @@
 	width: 50%;
 }
 
-#menu {
+div#menu {
 	width: 100%;
-	background-color: #e0e0ff;
+	background-color: #a0a0ff;
 	height: 40px;
 	float: left;
 }
 
 div#menu>div {
-	height: 40px;
+	height: 20px;
 	float: left;
-	padding: 0 10px;
+	padding: 10px;
+	color: #fff;
+	background-color: #a0a0ff;
 }
 	
 #body {
@@ -69,18 +71,25 @@ div#menu>div {
 #body .item {
 	width: 100%;
 	float: left;
-	margin: 10px 0;
+	border-bottom-width: 1px;
+	border-bottom-style: solid;
+	border-bottom-color: #a0a0ff;
 }
 
 #body .item .key {
 	width: 25%;
 	float: left;
+	color: #fff;
+	heigt: 100%;
+	background-color: #a0a0ff;
+	padding: 10px 0 10px 10px;
 }
 
-#body .item .key {
+#body .item .value {
 	width: auto;
 	float: left;
-	color: #e0e0ff;
+	height: 100%;
+	padding: 10px 0 10px 10px;
 }
 
 #body .buttons {
