--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -24,6 +24,8 @@
 	float: left;
 	background-color: #fff;
 	clear: both;
+	display: flex;
+	align-items: center;
 }
 
 #head img {
@@ -37,10 +39,13 @@
 	float: left;
 	font-size: 80px;
 	width: 50%;
+	font-family: Cursive;
+	color: #222;
 }
 
 div#menu {
-	width: 100%;
+	width: 90%;
+	padding: 0 5%;
 	background-color: #a0a0ff;
 	height: 40px;
 	float: left;
@@ -67,7 +72,7 @@ div#menu>a {
 	float: left;
 	text-align: center;
 	font-size: 30px;
-	padding: 10px 0;
+	padding: 20px 0;
 }
 
 #body .item {
@@ -76,31 +81,38 @@ div#menu>a {
 	border-bottom-width: 1px;
 	border-bottom-style: solid;
 	border-bottom-color: #a0a0ff;
+	background-color: #a0a0ff;
+	display: flex;
+	align-items: center;
 }
 
 #body .item .key {
 	width: 21%;
 	float: left;
+	height: 100%;
 	color: #fff;
-	heigt: auto;
-	background-color: #a0a0ff;
-	padding: 2% 0 2% 10px;
+	padding: 10px 2%;
+	background-color: inherit;
 }
 
 #body .item .value {
 	width: 71%;
 	float: left;
 	height: 100%;
-	padding: 2% 0 2% 10px;
+	background-color: #fff;
+	padding: 10px 2%;
 }
 
 #body .buttons {
 	width: 100%;
 	float: left;
-	margin: 10px 0;
+	margin: 20px 0;
 }
 
-#body .buttons>button {
+#body .buttons>a {
+	display: block;
+	text-decoration: none;
+	color: #000;
 	float: right;
 	padding: 10px;
 	border-width: 1px;
