Weiterleitung zur naechsten Seite so angepasst, dass Zuruckbutton funktioniert, Projekt zu EduLife umbennant und Layout von activityAdd repariert

--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -120,3 +120,20 @@ div#menu>a {
 	border-color: #a0a0ff;
 	margin-left: 20px;
 }
+
+input {
+	width: 100%;
+}
+
+textarea {
+	width: 100%;
+	resize: vertical;
+}
+
+textarea.small {
+	height: 80px;
+}
+
+textarea.large {
+	height: 160px;
+}
